chore(ci): proper enable-native-access setting
Ref CAMEL-22584