@@ -39,7 +39,8 @@
         <skipITs.s390x>true</skipITs.s390x>
         <skipTests.ppc64le>true</skipTests.ppc64le>
         <skipTests.s390x>true</skipTests.s390x>
-        <!-- Make use of native access during IT test execution only -->
+        <!-- Make use of native access during unit and IT test execution only -->
+        <camel.surefire.fork.additional-vmargs>--enable-native-access=ALL-UNNAMED</camel.surefire.fork.additional-vmargs>
         <camel.failsafe.fork.additional-vmargs>--enable-native-access=ALL-UNNAMED</camel.failsafe.fork.additional-vmargs>
     </properties>
 
